--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^9.0.0",
+    "cordova-browser": "^6.0.0",
     "cordova-ios": "^6.2.0",
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-windows": "^7.0.1"
@@ -25,7 +26,8 @@
     "platforms": [
       "android",
       "ios",
-      "windows"
+      "windows",
+      "browser"
     ]
   }
 }
