--- a/package.json
+++ b/package.json
@@ -13,21 +13,20 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "devDependencies": {
-    "cordova-android": "^9.0.0",
+    "cordova-android": "^9.1.0",
     "cordova-browser": "^6.0.0",
-    "cordova-ios": "^6.2.0",
-    "cordova-plugin-whitelist": "^1.3.4",
-    "cordova-windows": "^7.0.1"
+    "cordova-plugin-whitelist": "^1.3.4"
   },
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {}
     },
     "platforms": [
-      "android",
-      "ios",
-      "windows",
-      "browser"
+      "browser",
+      "android"
     ]
+  },
+  "dependencies": {
+    "crypto-js": "^4.0.0"
   }
 }
